# max9744fs

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  MAX9744.c  MAX9744.h  main.c  max9744d.service  sound_fs.c  sound_fs.h  trace.h
